# heca

./: .gitignore  .mempalaceignore  EXPERIMENTS.md  README.md  TODO.md  entities.json  install.sh  log.txt  mempalace.yaml  pyproject.toml  setup.cfg  venv.sh
cli/: __init__.py  cmd_eval.py  cmd_explain.py  cmd_help.py  cmd_plot.py  cmd_sweep.py  cmd_train.py  heca.py  hoopgn.py
cli/commands/: explain.py  plot.py  process_demos.py  rename.py  sweep.py  test.py  train.py
cli/group_skill/: __init__.py  cmd_create.py  cmd_plot.py  cmd_register.py  cmd_train.py  skill.py
conf/: common.py  entity_set.py  leaf_sets.py  object_sets.py  property_sets.py  skill_sets.py  state_sets.py
conf/agents/: __init__.py  tapas.py
conf/calvin/: area.py  sets.py  states.py
conf/commands/: cfg_explain.py  cfg_plot.py  cfg_train.py
conf/entities/: __init__.py
conf/eval/: gnn.py
conf/explain/: common.py  gnn.py  mlp.py
conf/properties/: __init__.py
conf/skill/: eval.py
conf/skills/: __init__.py  eval.py
conf/tapas/: sets.py  skills.py
conf/train/: base.py  common.py
heca/: __init__.py  extractor.py
heca/agents/: agent.py  heca.py  heca_base.py
heca/classes/: config.py  merge.py  persist.py  register.py
heca/clusterers/: custerer.py
heca/conditions/: analyzer.py  condition.py  evaluator.py  pair.py
heca/converters/: calvin_heca.py  calvin_hoop.py  calvin_tapas.py  converter.py
heca/entities/: container.py  entity.py  meta.py  old.py  postcon.py  precon.py  real.py
heca/environment/: image_extractor.py  temp.py  world.py
heca/environments/: calvin.py  environment.py  meta.py  ogbench.py  world.py
heca/evaluators/: __init__.py  agent_hoop.py  evaluator.py  heca.py  scene.py  sparse.py
heca/generators/: generator.py  mp.py
heca/guis/: agent_tester.py  demo_postprocessor.py  demo_selector.py  encoding_viewer.py  image_encoding_viewer.py  image_selector.py  reference_selector.py  scene_sample_selector.py  tapas_agent_tester.py  tapas_demo_processor.py  tapas_demo_selector.py
heca/heca_gnn/: critic.py  hecagn.py  mp.py  network.py
heca/helper/: descriptions.py  molmo.py  test_scene.py
heca/image_encoders/: dino_encoder.py  image_encoder.py  molmo_encoder.py
heca/image_extractors/: dino_extractor.py  image_extractor.py  knn.py  molmo_extractor.py
heca/misc/: area.py  area_state.py  base.py  classes.py  explainer.py  hardware.py  logger.py  old.py  ppo.py  state.py  td.py  threshold_boundary.py
heca/plotters/: plotter.py
heca/properties/: __init__.py  property.py  v1.py
heca/runners/: explainer.py  plotter.py  runner.py
heca/scenes/: scene.py
heca_temp_scripts/: image_selector.py  make_demos.py  make_scene_refs.py  ogbench_gen.py  postprocess_demos.py  process_demos.py  rename.py  select_demos.py  select_samples.py  test.py  test_agents.py  test_ogbench.py
hoopgn/: base.py  buffer.py  classes.py  data.py  explainer.py  hardware.py  logger.py  registry.py  storage.py  watcher.py
hoopgn/agents/: __init__.py  agent.py  branch_agent.py  hoop.py  hoopgn_agent.py  human.py  human_agent.py  leaf.py  leaf_agent.py  mp_agent.py  ppo.py  skip_agent.py  tapas_agent.py
hoopgn/clusterers/: custerer.py
hoopgn/converters/: calvin_hoop.py  calvin_tapas.py  converter.py  tapas.py  v1.py  v2.py
hoopgn/domains/: domain.py
hoopgn/entities/: __init__.py  entity.py  meta.py  real.py  v1.py  v2.py
hoopgn/environments/: __init__.py  calvin.py  environment.py  ogbench.py
hoopgn/evaluators/: __init__.py  agent_hoop.py  dense.py  dense2.py  dense3.py  evaluator.py  scene.py  set_evaluator.py  sparse.py
hoopgn/experiments/: __init__.py  experiment.py  noise_experiment.py
hoopgn/generators/: __init__.py  generator.py  hoopgn.py  mp.py
hoopgn/hoops/: hoop.py  mp.py  mp_gnn.py
hoopgn/misc/: area.py  area_state.py  buffer.py  classes.py  hardware.py  ppo.py  state.py  td.py  threshold_boundary.py  watcher.py
hoopgn/networks/: __init__.py  baseline.py  gnn.py  hoopgnv1.py  mp_baseline.py  mp_final.py  mp_gnn.py  network.py  v1.py  v2.py
hoopgn/observation/: __init__.py  calvin.py  demonstration.py  observation.py  td_entities.py  td_entity.py  td_parameters.py  td_policies.py  td_properties.py  td_scene.py  td_world.py
hoopgn/operators/: skill_operator.py  tapas_operator.py
hoopgn/plots/: clustering_plot.py  e3d_plot.py  entity_plot.py  plot.py  sampling_plot.py  tp.py
hoopgn/plotters/: plotter.py
hoopgn/plotting/: object_point.py  run.py
hoopgn/policies/: __init__.py  branch_policy.py  leaf_policy.py  policy.py  rtapas_policy.py  tapas_policy.py
hoopgn/properties/: __init__.py  property.py  rotation.py  v1.py
hoopgn/runners/: explain_runner.py  explainer.py  plot_runner.py  runner.py  tps.py  train_runner.py
hoopgn/scenes/: scene.py
hoopgn/skills/: __init__.py  skill.py  skill_evaluator.py  skill_networker.py  skill_operator.py
hoopgn/storages/: skill_storage.py  storage.py
notebooks/: clip.ipynb  demo_inspector.ipynb  extractor.ipynb  molmo.ipynb  molmo_restricted.ipynb  molmo_states.py  molmo_token.ipynb  ogbench.ipynb  test_scene.py  tipsy.ipynb
notebooks/encoder/: clip.ipynb  dinov3.ipynb  extractor.ipynb  molmo_describe.ipynb  molmo_restricted.ipynb  molmo_token.ipynb  tipsy.ipynb
notebooks/tapas/: og_blueprint.ipynb  og_open_drawer.ipynb  og_test_scene.ipynb
scripts/: debug.py  explain.py  select_demos.py  test.py  test_agents.py  test_conditions.py  test_training.py  train.py
src/: buffer.py  factory.py  storage.py  variables.py
src/agents/: __init__.py  agent.py  human.py  ppo.py  search.py
src/environments/: __init__.py  calvin.py  environment.py
src/evaluators/: __init__.py  dense.py  dense2.py  dense3.py  evaluator.py  skill.py  sparse.py  tree.py
src/experiments/: __init__.py  experiment.py  noise_experiment.py  pepr.py  skill_check.py
src/modules/: buffer.py  explainer.py  storage.py  watcher.py
src/networks/: baseline.py  gnn.py  network.py
src/observation/: calvin.py  demonstration.py  observation.py
src/operators/: operator.py  tapas.py
src/plotting/: helper.py  (+1 more)
test/: test_condition.py
(+1135 files in other folders)
