[metadata]
name = hoopgn
version = 0.0.1
author = Jan Gruhnert
description = TODO: Add description
readme = README.md
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/JRGruhnert/master-project

[options]
packages = find:
python_requires = >=3.10
install_requires =
    thop
    click
    questionary
    numpy==1.26.4
    matplotlib==3.10.8
    wandb==0.25.1
    loguru==0.7.3
    torch==2.1.0
    torch_geometric==2.4.0
    torchvision==0.16.0
    torchaudio==2.1.0
    tensordict>=0.2.0
    omegaconf==2.3.0
    ogbench==1.2.0
    setuptools<81
    riepybdlib @ git+https://github.com/vonHartz/riepybdlib.git@a56cbdb7c01e44e50956a8accb973d608449ab77
    #tapas_gmm @ git+https://github.com/robot-learning-freiburg/TAPAS.git@52e35214b9baa7b190b87196c36b9e98f4006149
    #calvin_env @ git+https://github.com/mees/calvin_env.git@797142c588c21e76717268b7b430958dbd13bf48
    tapas_gmm_modified @ git+https://github.com/JRGruhnert/tapas_gmm_modified.git@3b27ca9fce2ea4964692b95cf5ab1e4bc193baa8
    calvin_env_modified @ git+https://github.com/JRGruhnert/calvin_env_modified.git@1738be9b9ae4ac94fbd572001898b4e36f4c2683


[options.packages.find]
where = .
include = *

[options.extras_require]
dev =
    pre-commit
    black==22.1.0
    flake8==4.0.1
    pytest>=7.0

[options.entry_points]
console_scripts =
    hoopgn = cli:entry_point