[metadata]
name = hrl
version = 0.0.1
author = Jan Gruhnert
description = Implementation of my master project
readme = README.md
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/JRGruhnert/master-project

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    cffi
    Pillow
    pyquaternion
    html-testRunner
    setuptools
    natsort
    matplotlib
    wandb
    pynput
    opencv-python
    opencv-contrib-python
    scikit-image
    numba
    tqdm
    loguru
    jsonpickle
    scikit-learn
    nvitop
    timm
    lovely_numpy
    lovely_tensors
    ipympl
    torch==2.1.0
    tensordict==0.2.1
    omegaconf
    dill
    pandas
    mplib
    captum
    torch-geometric
    riepybdlib @ git+https://github.com/vonHartz/riepybdlib.git@a56cbdb7c01e44e50956a8accb973d608449ab77
    #tapas_gmm @ git+https://github.com/robot-learning-freiburg/TAPAS.git@52e35214b9baa7b190b87196c36b9e98f4006149
    #calvin_env @ git+https://github.com/mees/calvin_env_modified.git@797142c588c21e76717268b7b430958dbd13bf48
    tapas_gmm @ git+https://github.com/JRGruhnert/tapas_gmm_modified.git@a32db56bc7f504112efdb38d3d2ede19630b884e
    calvin_env_modified @ git+https://github.com/JRGruhnert/calvin_env_modified.git@1738be9b9ae4ac94fbd572001898b4e36f4c2683

[options.packages.find]
where = .
include = *

[options.extras_require]
dev =
    pre-commit
    black==22.1.0
    flake8==4.0.1
    pytest>=7.0

[options.entry_points]
console_scripts =
    debug = scripts.debug:entry_point
    eval-skills = scripts.eval_skills:entry_point
    plot-skills = scripts.plot_skills:entry_point
    plot = scripts.plot:entry_point
    train = scripts.train:entry_point
    p_train = scripts.p_train:entry_point
    explain = scripts.explain:entry_point